# CodexLens

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex-lens-项目总结.md  install.py  main.py  mcp_server.py  notifications.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: api-key-setup.md  codex-deploy-prompt.md  image-proxy-toggle.md  python-environment.md
proxy/: __init__.py  server.py
tests/: test_basic.py
tools/: __init__.py  analyze_img.py  docx_utils.py  read_document.py  read_docx.py  read_pdf.py
