[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "CodexLens"
version = "0.1.0"
description = "Codex input lens for scientific documents and images."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "openai",
  "python-docx",
  "pdfplumber",
  "PyMuPDF",
  "winotify; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/ciamer/codex-lens"
Documentation = "https://github.com/ciamer/codex-lens#readme"
Issues = "https://github.com/ciamer/codex-lens/issues"

[tool.setuptools]
py-modules = ["main", "mcp_server", "install", "notifications"]
packages = ["tools", "proxy"]
